# Kern

./: .gitignore  CODE_EDITOR_SPEC.md  README.md  THIRD_PARTY_LICENSES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: curl-install.sh  install.sh
src/: App.tsx  actions.ts  commands.ts  editorBridge.ts  editorCommands.ts  fsActions.ts  ipc.ts  keybindings.ts  lang.ts  main.tsx  monaco-vim.d.ts  monacoSetup.ts  projects.ts  prompt.ts  rest.ts  runner.ts  snippets.ts  testing.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dap.rs  db.rs  editorconfig.rs  fmt.rs  frontend.rs  fs.rs  git.rs  http_client.rs  lib.rs  lint.rs  lsp.rs  run.rs  search.rs  tasks.rs  terminal.rs  update.rs  watch.rs  window_cmd.rs
src/components/: AboutPanel.tsx  AddonsPanel.tsx  BottomDock.tsx  CommandPalette.tsx  DBPanel.tsx  DebugView.tsx  DiffView.tsx  Editor.tsx  EditorArea.tsx  ExtensionsPanel.tsx  GitPanel.tsx  HistoryPanel.tsx  MarkdownPreview.tsx  Onboarding.tsx  PathBar.tsx  ProblemsPanel.tsx  PromptModal.tsx  RunnerPanel.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx  TitleBar.tsx  Toasts.tsx  Welcome.tsx  WindowControls.tsx  fileIcons.tsx
src/dap/: client.ts  store.ts
src/editor/: editorconfig.ts  format.ts  lens.ts
src/extensions/: catalog.ts
src/git/: actions.ts  gutter.ts
src/hooks/: useAutoSave.ts  useFileWatcher.ts  useGitSignal.ts  useKeymap.ts  useRunner.ts
src/lsp/: client.ts
src/store/: useStore.ts
src/styles/: global.css
src/themes/: monaco-themes.ts  tokens.css
