[package]
name = "kern-code"
version = "0.1.1"
description = "Kern — a calm, complete desktop code editor (Tauri 2 + React + Monaco)"
authors = ["Alexander Gese"]
edition = "2021"
license = "MIT"
repository = "https://github.com/AlexanderGese/Kern"
homepage = "https://github.com/AlexanderGese/Kern"
readme = "../README.md"
keywords = ["editor", "tauri", "ide", "monaco", "code-editor"]
categories = ["development-tools", "text-editors"]
# This crate is the Rust backend of a Tauri desktop app; the web frontend
# (../dist) is bundled separately and is not part of the published crate.
exclude = ["gen/", "icons/Square*", "icons/*/", "icons/StoreLogo.png"]

[lib]
# The `_lib` suffix keeps the lib name unique so it won't conflict with the bin
# name on Windows (see rust-lang/cargo#8519).
name = "kern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Keep the binary named `kern` even though the published crate is `kern-code`.
[[bin]]
name = "kern"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
notify = "6"
git2 = { version = "0.19", default-features = false }
portable-pty = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
